src/objects/GDP_File_Fields_Description__c.object
<CustomObject>
    <description>Placholder for the fields that need to be sent to the Amazon Server to produce the Delta and Master Files</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Salesforce.com  API field name used to build SOQL query ex: Website__c or Status__r.Name should never have more than one level or lookup as Account__r.Industry__r.Name create a formula instead and reference the API name of the formula</description>
        <inlineHelpText>Salesforce.com  API field name used to build SOQL query ex: Website__c or Status__r.Name should never have more than one level or lookup as Account__r.Industry__r.Name create a formula instead and reference the API name of the formula</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Object_Name__c</fullName>
        <description>Must be a valid API Name (same spelling as Salesforce), when not required leave the section blank</description>
        <inlineHelpText>Must be a valid API Name (same spelling as Salesforce), when not required leave the section blank</inlineHelpText>
        <label>API Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description will help to understand the use of the data field</description>
        <inlineHelpText>Description will help to understand the use of the data field</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will not be tracked to trigger Delta update records</description>
        <inlineHelpText>Field will not be tracked to trigger Delta update records</inlineHelpText>
        <label>Do Not Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Field_API_Name__c</fullName>
        <description>Field used to compare with the data field value</description>
        <inlineHelpText>Field used to compare with the data field value</inlineHelpText>
        <label>Filter Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field_Value__c</fullName>
        <description>Value compared with the data value, if the same the data value of the requested field is returned otherwise the returned value is blank</description>
        <inlineHelpText>Value compared with the data value, if the same the data value of the requested field is returned otherwise the returned value is blank</inlineHelpText>
        <label>Filter Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDP_File_Description__c</fullName>
        <label>GDP File Description</label>
        <referenceTo>GDP_File_Description__c</referenceTo>
        <relationshipLabel>GDP File Fields Description</relationshipLabel>
        <relationshipName>GDP_File_Fields_Description_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hidden_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Column is processed during the extract but will be hidden in the excel file (The column will not exist). Usage : allow formula like concatenation to happen in another column.</description>
        <inlineHelpText>The Column is processed during the extract but will be hidden in the excel file (The column will not exist). Usage : allow formula like concatenation to happen in another column.</inlineHelpText>
        <label>XLS Hidden Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Field Label used for xml and xls file type during file production</description>
        <inlineHelpText>Field Label used for xml and xls file type during file production</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>TEXT(Target__c) + LPAD(TEXT(Position__c),5,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Important: Index Position to order the field selection during file production</description>
        <inlineHelpText>Important: Index Position to order the field selection during file production</inlineHelpText>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Field size in number of characters</description>
        <inlineHelpText>Field size in number of characters</inlineHelpText>
        <label>Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TXT_Hidden_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove the field from the Txt file type generation</description>
        <inlineHelpText>Remove the field from the Txt file type generation</inlineHelpText>
        <label>TXT Hidden Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Target is the object field type where the data is going to be loading from</description>
        <inlineHelpText>Target is the object field type where the data is going to be loading from</inlineHelpText>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Allow proper transformation to happen during file production and depending on the file type.</description>
        <inlineHelpText>Allow proper transformation to happen during file production and depending on the file type.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date YYYYMMDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date YYYYMMDDHHMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datetime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Value Field Visible or not visible in the output</description>
        <inlineHelpText>Value Field Visible or not visible in the output</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XML_Hidden_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove the field from the XML file type generation</description>
        <inlineHelpText>Remove the field from the XML file type generation</inlineHelpText>
        <label>XML Hidden Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xml_Group__c</fullName>
        <description>Allow to group field in the same complex element of the given structure (Agency or Airline)</description>
        <inlineHelpText>Allow to group field in the same complex element of the given structure (Agency or Airline)</inlineHelpText>
        <label>Xml_Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xml_Name__c</fullName>
        <description>Will replace the Label Name when populated, used to created unbounded xml structure</description>
        <inlineHelpText>Will replace the Label Name when populated, used to created unbounded xml structure</inlineHelpText>
        <label>Xml Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDP File Fields Description</label>
    <nameField>
        <displayFormat>GDP-FFD-{00000}</displayFormat>
        <label>GDP File Fields Description Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDP File Fields Description</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>